# Autonomous-Code-Refactoring-Environment

./: Dockerfile  README.md  inference.py  openenv.yaml  openenv_interface.py  pyproject.toml  requirements.txt  server.py  validate.py
ACRE_FINAL/: .gitignore  Dockerfile  models.py  openenv_interface.py  requirements.txt
ACRE_FINAL/acre/: demo.py
ACRE_FINAL/acre/actions/: __init__.py  transformations.py
ACRE_FINAL/acre/datasets/: __init__.py  code_samples.py
ACRE_FINAL/acre/tasks/: __init__.py
ACRE_FINAL/acre/utils/: metrics.py
acre/: __init__.py  main.py
acre/env/: __init__.py  refactor_env.py
acre/tasks/: __init__.py  easy_task.py  grader.py  hard_task.py  medium_task.py  task_registry.py
acre/training/: __init__.py  train_agent.py
acre/utils/: __init__.py
server/: __init__.py  app.py
