[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acre-openenv"
version = "1.0.0"
description = "Autonomous Code Refactoring Environment"
authors = [
    { name = "Pranav Mangal" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "gymnasium",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["acre*", "server*"]

[tool.openenv]
entry_point = "server.app:app"

